--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 # Site Settings
 title: Mattia Licciardi
 url: 'https://mlicciardi.github.io'
-baseurl: '/'
+baseurl: ''
 description: A beautiful resume powered by Jekyll
 
 # Style will be applied only after restarting the build or serve. Just choose one of the options.
@@ -26,6 +26,7 @@ compress_html: # - http://jch.penibelst.de/
     envs: development
 
 # Development Settings
+baseurl: ''
+host: localhost
 port: 4000
-host: 0.0.0.0
 safe: false
