--- a/_data/data.yml
+++ b/_data/data.yml
@@ -18,21 +18,18 @@ sidebar:
         level: Professional
 
     interests:
-      - item: Photography
+      - item: Space exploration
+        link:
+      - item: Nuclear Energy
         link:
       - item: Snowboarding
         link:
       - item: Hiking
         link:
-
-career-profile:
-    title: Career Profile
-    summary: |
-      I'm Mattia, born in Venice and grownup as a European, untiring traveler, lifelong learner, passionate about science, technology, and photography. I enjoy my days' coding, going out in the wild nature to take photos.
-
-      Accomplished full-stack developer focused on complex web-based applications, PWA, and hybrid mobile applications. Long-term experience developing a wide range of solutions, I worked with several technologies in different industries and markets keeping the focus on a great product and end-user experiences within mind cost efficiency and scalability.
-
-      I'm often described as a goal-oriented person, highly-skilled team player able to collaborate with other developers, engineers, and software testers to deliver remarkable products within deadlines and budgets.
+      - item: Photography
+        link:
+      - item: Travel
+        link:
 
 education:
     - degree: Computer Engineering
@@ -42,28 +39,130 @@ education:
       university: ITIS Carlo Zuccante
       time: 2002 - 2007
 
+career-profile:
+    title: Profile
+    summary: |
+      I'm Mattia! Born in Venice, untiring traveler, lifelong learner, passionate about science, technology, and photography. I enjoy my days' coding, going out in the wild nature to take photos and if snow involved, having fun with my board.
+      Accomplished full-stack developer focused on complex web-based applications, PWA, and hybrid mobile applications. Long-term experience developing a wide range of solutions, I worked with several technologies in different industries and markets.
+      I'm often described as a goal-oriented person, highly-skilled team player able to collaborate with other developers and software testers to deliver remarkable products focused on great end-user experience within in mind cost, efficiency, and scalability.
+
+skills:
+    title: Skills &amp; Proficiency
+    toolset:
+      - name: Javascript, HTML & CSS
+        level: 95%
+      - name: Angular, Ember, React
+        level: 80%
+      - name: TypeScript, ES6
+        level: 90%
+      - name: Sass, Less, BEM
+        level: 75%
+      - name: NPM, Yarn, Git
+        level: 80%
+      - name: Node, Express
+        level: 70%
+      - name: C#, Asp.Net
+        level: 70%
+      - name: Python, Ruby on Rails, PHP
+        level: 30%
+      - name: Mongo, Redis, SQL, T-SQL
+        level: 70%
+
 experiences:
-    - role: Principal Senior Full-stack JavaScript Developer
-      time: 11.2019 - Present
-      company: Ten Lifestyle Group Plc, London
+    - role: Senior Full-stack Developer
+      time: 10.2018 - 10.2019
+      company: Ten Lifestyle Group Plc, London (UK)
       details: |
-        Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Donec quam felis, ultricies nec, pellentesque eu, pretium quis, sem. Nulla consequat massa quis enim. Donec pede justo. Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo.
-    - role: Senior Full-stack JavaScript Developer
-      time: 10.2017 - 10.2019
-      company: Plandek Ltd, London
+        - Develop efficient and complex UI with ReactJS and Material Design
+        - Write code that works across current versions of all major browsers
+        - Maintain code with ES6 and TypeScript
+        - Maintain a well-organized codebase of components
+        - Migrate existing code from EmberJS to ReactJS
+        - Think through edge cases and unexpected user interactions to develop a robust UX
+        - Structure pages to optimize for fast load time and efficient API calls
+        - Optimize existing code to minimize waste of client resources
+        - Collaborate with backend engineers to implement backend requirements for new features
+    - role: Senior Full-stack Developer
+      time: 10.2018 - 10.2019
+      company: Plandek Ltd, London (UK)
       details: |
         Development and keeping activities for the key product of the company: a web platform that allows generating insight from the big data sitting within the most used software delivery systems and increase the accuracy of delivery forecasting.
 
         Key responsibilities and duties:
-        - Develop efficient and complex UI with Ember, React, and Material Design.
-        - Write code that works across current versions of all major browsers.
-        - Maintain code with ES6 and TypeScript.
-        - Maintain a well-organized codebase of components.
-        - Migrate existing code from Ember to React.
-        - Think through edge cases and unexpected user interactions to develop a robust UX.
-        - Structure pages to optimize for fast load time and efficient API calls.
-        - Optimize existing code to minimize waste of client resources.
-        - Collaborate with backend engineers to implement backend requirements for new features.
+        - Develop efficient and complex UI with ReactJS and Material Design
+        - Write code that works across current versions of all major browsers
+        - Maintain code with ES6 and TypeScript
+        - Maintain a well-organized codebase of components
+        - Migrate existing code from EmberJS to ReactJS
+        - Think through edge cases and unexpected user interactions to develop a robust UX
+        - Structure pages to optimize for fast load time and efficient API calls
+        - Optimize existing code to minimize waste of client resources
+        - Collaborate with backend engineers to implement backend requirements for new features
+    - role: Senior Full-stack Developer
+      time: 10.2017 - 10.2019
+      company: Artirix Ltd, London (UK)
+      details: |
+        Development and keeping activities for the key product of the company: a web platform that allows generating insight from the big data sitting within the most used software delivery systems and increase the accuracy of delivery forecasting.
+
+        Key responsibilities and duties:
+        - Develop efficient and complex UI with ReactJS and Material Design
+        - Write code that works across current versions of all major browsers
+        - Maintain code with ES6 and TypeScript
+        - Maintain a well-organized codebase of components
+        - Migrate existing code from EmberJS to ReactJS
+        - Think through edge cases and unexpected user interactions to develop a robust UX
+        - Structure pages to optimize for fast load time and efficient API calls
+        - Optimize existing code to minimize waste of client resources
+        - Collaborate with backend engineers to implement backend requirements for new features
+    - role: Senior Full-stack Developer
+      time: 03.2017 - 09.2017
+      company: Nexttech Srl, Venice (Italy)
+      details: |
+        Development and keeping activities for the core product of the company: forSales, Operational CRM and Order Entry, an innovative solution for the management of the business on the move.
+
+        Key responsibilities and duties:
+        - Front-end web development on AngularJS, HTML, CSS
+        - Back-end development on LAMP Stack with PHP Slim Framework - Front-end mobile development on jQuery, HTML, CSS, SQL Lite
+        - Back-end SAP integration with Delphi ETL
+        - Implement and maintenance version control SVN
+    - role: CTO
+      time: 06.2014 - 06.2017
+      company: Digital Rockers Srl, Padova (Italy)
+      details: |
+        Digital Rockers is an interactive agency that I've co-founded, which designs and develops B2B digital solutions, mainly for the education, processes optimization, and sales force automation. At Digital Rockers as CTO, I oversee all phases of project development, from analysis to actual development, maintenance, and deployment. Digital Rockers has a strong user-centered approach and I help the UX designer with the user researches definition and execution and UI design.
+
+        Key responsibilities and duties:
+        - Analysis and documentation
+        - Agile project management with Jira
+        - Full-stack development using the MEAN stack and LEAN MySQL stack
+        - Back-end development building and consuming database-backed RESTfull APIs
+        - Implement TDD/BDD with Mocha.js
+        - Implement DevOps with Grunt.js
+        - Version control and continuous integration with Git and Deploybot
+    - role: Full-stack Developer
+      time: 11.2012 - 11.2014
+      company: TeamSystem Spa, Padova (Italy)
+      details: |
+        Development and keeping activities for the software product, including application core development, interface implementation, and user assistance. At the same time, I'm involved in process consolidation praxis together with documentation drawing up.
+
+        Key responsibilities and duties:
+        - Front-end development of web-based tools with jQuery, HTML, CSS
+        - Back-end development of SOAP API using C#, LINQ, ASP.NET with MVC Pattern
+        - Enhance an application that processes data on multiple databases
+        - Identify and pursue potential performance, reliability, and process improvements
+        - Version control with TortoiseSVN
+    - role: Full-stack Developer
+      time: 02.2009 - 02.2012
+      company: C.B. Sistemi, Venezia (Italy)
+      details: |
+        Development and keeping activities for the health care automation ERP in the Health Care Industry, including application core development, interface implementation and user assistance. At the same time, I'm involved in process consolidation praxis together with documentation drawing up.
+
+        Key responsibilities and duties:
+        - Maintain company VBAccess and MS SQL based ERP
+        - Migrate to C#, Linq and MS SQL based the company ERP
+        - Identify and correct problems uncovered by testing and customer feedback
+        - Maintain company web site based on Joomla
+
 projects:
     title: Projects
     intro: >
@@ -84,20 +183,6 @@ projects:
       - title: Delta
         link: "#"
         tagline: "A responsive Bootstrap one page theme designed to help app developers promote their mobile apps"
-skills:
-    title: Skills &amp; Proficiency
-    toolset:
-      - name: Javascript, HTML & CSS
-        level: 95%
-      - name: Angular, Ember, React
-        level: 80%
-      - name: TypeScript, ES6
-        level: 90%
-      - name: Sass, Less, BEM
-        level: 75%
-      - name: NPM, Yarn, Git
-        level: 80%
-      - name: Node.js
-        level: 50%
+
 footer: >
     Made with <i class="fas fa-heart"></i> in Venice
