--- a/_data/data.yml
+++ b/_data/data.yml
@@ -72,10 +72,10 @@ proficiency:
     title: Proficiency
     toolset:
       - description: Agile practices
-      - Design, analysing and troubleshooting large-scale distributed systems
-      - Implement efficient and complex applications with Angular, Ember, React
-      - Maintain a well-organized codebase of components with strong unit tests
-      - Think through edge cases and unexpected user interactions to develop a robust UX
+      - description: Design, analysing and troubleshooting large-scale distributed systems
+      - description: Implement efficient and complex applications with Angular, Ember, React
+      - description: Maintain a well-organized codebase of components with strong unit tests
+      - description: Think through edge cases and unexpected user interactions to develop a robust UX
 
 experiences:
     - role: Senior Full-stack Developer
@@ -123,11 +123,7 @@ experiences:
         - Structure pages to optimize for fast load time and efficient API calls
         - Optimize existing code to minimize waste of client resources
         - Collaborate with backend engineers to implement backend requirements for new features
-    - role: Senior Full-stack Developer
-      time: 03.2017 - 09.2017
-      company: Nexttech Srl, Venice (Italy)
-      link: https://www.linkedin.com/company/nexttech-srl/about
-      details: |
+
         Development and keeping activities for the core product of the company: forSales, Operational CRM and Order Entry, an innovative solution for the management of the business on the move.
 
         Key responsibilities and duties:
@@ -136,7 +132,7 @@ experiences:
         - Back-end SAP integration with Delphi ETL
         - Implement and maintenance version control SVN
     - role: Founder and CTO
-      time: 06.2014 - 06.2017
+      time: 06.2012 - 06.2017
       company: Digital Rockers Srl, Padova (Italy)
       link: https://www.linkedin.com/company/digital-rockers-s-r-l-/about
       details: |
@@ -164,7 +160,7 @@ experiences:
         - Identify and pursue potential performance, reliability, and process improvements
         - Version control with TortoiseSVN
     - role: Full-stack Developer
-      time: 02.2009 - 02.2012
+      time: 02.2007 - 02.2012
       company: C.B. Sistemi, Venezia (Italy)
       link: https://www.linkedin.com/company/cbsistemi/about
       details: |
