--- a/_data/data.yml
+++ b/_data/data.yml
@@ -5,6 +5,7 @@ sidebar:
     tagline: Full-stack JavaScript Developer
     avatar: profile.jpg
 
+    website: mlicciardi.github.io
     github: mlicciardi
     linkedin: mlicciardi
     email: mattia.licciardi@gmail.com
